--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-DB_HOST =
-DB_PORT =
-DB_USER =
-DB_PASS =
-DB_DATABASE =
-DB_DIALECT =
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=root
+DB_PASS=
+DB_DATABASE=db_GCBInvestimentos
+DB_DIALECT=mysql
+PORT=3000
